Added one-to-one relationship without change in Mapper class.